WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66725
Fix usage of PassRefPtr in postMessage and structured clone code.
https://bugs.webkit.org/show_bug.cgi?id=66725
Summary
Fix usage of PassRefPtr in postMessage and structured clone code.
David Levin
Reported
2011-08-22 15:49:52 PDT
See summary.
Attachments
Patch
(6.69 KB, patch)
2011-08-22 16:11 PDT
,
David Levin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2011-08-22 16:11:07 PDT
Created
attachment 104760
[details]
Patch
David Levin
Comment 2
2011-08-22 16:31:44 PDT
Committed as
http://trac.webkit.org/changeset/93558
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug