Fix usage of PassRefPtr in postMessage and structured clone code. https://bugs.webkit.org/show_bug.cgi?id=66725

Reviewed by Darin Adler.

No new functionality exposed so no new tests.

* bindings/js/JSDOMWindowCustom.cpp:
(WebCore::JSDOMWindow::postMessage): Changed PassRefPtr to RefPtr and added release when handed off.
* bindings/js/JSMessageEventCustom.cpp:
(WebCore::JSMessageEvent::initMessageEvent): Ditto.
* bindings/js/JSMessagePortCustom.h:
(WebCore::handlePostMessage): Ditto.
* bindings/js/SerializedScriptValue.cpp:
(WebCore::SerializedScriptValue::create): Ditto.
* workers/SharedWorkerContext.cpp:
(WebCore::createConnectEvent): Added release() when a RefPtr is returned.

Canonical link: https://commits.webkit.org/82537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93558 268f45cc-cd09-0410-ab3c-d52691b4dbfc